# player

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/player1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LOGE.cpp  LOGE.h  native-lib.cpp  speedliveapi.h
app/src/main/java/com/example/player1/: MainActivity.java  Player.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/example/player1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
